# point_cloud_tree_generation

./: .gitignore  README.md  models.dvc  pyproject.toml  requirements_dev.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
configs/: default_config.yaml
dockerfiles/: api.dockerfile  model.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md
src/tree/: cfg.py  data.py  data_local.py  generate_tree.py  loss.py  model.py  model_gnn.py  train.py  util.py  visualize_tree.py
src/tree/models/: autoencoder.py  common.py  diffusion.py  flow.py  transform.py  vae_flow.py  vae_gaussian.py
src/tree/models/encoders/: pointnet.py
tests/: test_data.py
