[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tree"
version = "0.0.1"
description = "Machine Learning Operations project on 3D point cloud generation of trees"
authors = [
  { name = ": Danina Li, Helena Keitum and Jason Aron Merit", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
